Fixes pop up align content

--- a/styles/components/_popUp.scss
+++ b/styles/components/_popUp.scss
@@ -53,6 +53,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center;
 
             &--inactive{
                 position: "inherit";
