--- a/styles/main.css
+++ b/styles/main.css
@@ -1920,6 +1920,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .popUp__contentBody--inactive {
